# recursive-ai-dev-website

./: .gitignore  README.md  index.html  package.json
.github/workflows/: deploy.yml
public/projects/ai/html/: KiraLM.html
public/projects/ai/ipynb/: CadenceTTY_Notebook.ipynb  HodgeLM_Notebook.ipynb
public/projects/games/caveman-smash/: index.html
public/projects/mcp/: psychcoherence.py
public/projects/programs/labyr/: .gitignore  Makefile  README.md  pyproject.toml
public/projects/programs/labyr/desktop/: __init__.py  file_manager_plugin.py  integration.py  terminal_integration.py
public/projects/programs/labyr/diegetic/: __init__.py  artifacts.py  filesystem.py  keys.py  narrative.py  rooms.py
public/projects/programs/labyr/diegetic/themes/cosmic_horror/: artifact_names.txt  descriptors.json  room_names.txt
public/projects/programs/labyr/diegetic/themes/dark_fantasy/: artifact_names.txt  descriptors.json  room_names.txt
public/projects/programs/labyr/engine/: __init__.py  entropy.py  labyrinth.py  renderer.py  topology.py
public/projects/programs/labyr/guest/initramfs/: Makefile  init  rcS
public/projects/programs/labyr/guest/labyr_daemon/: Cargo.toml  build.rs
public/projects/programs/labyr/guest/labyr_daemon/src/: api_server.rs  diegetic_fs.rs  labyrinth_engine.rs  main.rs  security.rs
public/projects/programs/labyr/guest/security/: apparmor_profile  capabilities.conf  seccomp_profile.json
public/projects/programs/labyr/host/: __init__.py  api_gateway.py  audit_logger.py  config_injector.py  labyr_host.py  rootfs_builder.py  security_validator.py  vm_manager.py
public/projects/programs/labyr/tests/: test_diegetic_fs.py  test_entropy.py  test_integration.py  test_labyrinth.py  test_vm_security.py
public/projects/programs/vaeru/: LICENSE  Makefile  README.md  pyproject.toml
public/projects/programs/vaeru/config/: vaeru.toml
public/projects/programs/vaeru/docs/: ARCHITECTURE.md  OPERATIONS.md  ROADMAP.md  SAFETY.md  original-spec.txt
public/projects/programs/vaeru/scripts/: install-systemd.sh
public/projects/programs/vaeru/src/vaeru/: __init__.py  actions.py  cli.py  config.py  core.py  models.py  sensors.py  state.py
public/projects/programs/vaeru/src/vaeru/primitives/: __init__.py  p10_decay.py  p11_topology.py  p12_tracer.py  p1_gradient.py  p2_membrane.py  p3_phase.py  p4_residue.py  p5_lattice.py  p6_inverter.py  p7_pressure.py  p8_echo.py  p9_coherence.py
public/projects/programs/vaeru/tests/: test_primitives.py  test_runtime.py
src/: App.tsx  fileTree.ts  index.css  projects.ts
src/components/: Contact.tsx  FilePreview.tsx  GlobalPlayer.tsx  Navigation.tsx  ProjectCard.tsx  ProjectExplorer.tsx  ProjectModal.tsx  ProjectSection.tsx
src/components/sections/: About.tsx  Archives.tsx  Hero.tsx
src/components/ui/: GothicElements.tsx
src/hooks/: useAudio.ts  useScrollReveal.ts
src/types/: index.ts
(+61 files in other folders)
