[build-system]
requires = ["setuptools>=68.0", "wheel>=0.41.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "labyr-project"
version = "0.1.0-alpha"
description = "Ephemeral VM with Diegetic Dark Fantasy Filesystem"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Labyr Project Contributors"}
]
dependencies = [
    "qemu-python>=0.1.0",
    "pyyaml>=6.0",
    "cryptography>=41.0",
    "msgpack>=1.0",
    "numpy>=1.24",
    "networkx>=3.1",
    "matplotlib>=3.7",
    "rich>=13.0",
    "click>=8.1",
    "pydantic>=2.0",
    "aiohttp>=3.8",
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.1",
    "mypy>=1.5",
    "ruff>=0.0.286",
    "black>=23.7",
]

[project.scripts]
labyr = "host.labyr_host:main"
labyr-engine = "engine.labyrinth:main"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
