[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vaeru-ai"
version = "0.1.0"
description = "VAERU: defensive-first variance-adaptive host observation and response engine"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "VAERU Project" }]
keywords = ["security", "host-monitoring", "defensive", "sqlite", "incident-response"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Security",
  "Topic :: System :: Monitoring",
]
dependencies = []

[project.scripts]
vaeru = "vaeru.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
vaeru = ["py.typed"]
