[package]
name = "labyr-daemon"
version = "0.1.0"
edition = "2021"
authors = ["Labyr Project Contributors"]
description = "Single entry process for Labyr ephemeral VM"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

nix = { version = "0.27", features = ["resource"] }

log = "0.4"
env_logger = "0.10"

caps = "0.5"

rand = "0.8"
rand_chacha = "0.3"

petgraph = "0.6"

thiserror = "1"
anyhow = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
